Update to use both brenda-profile.jpg and brenda.jpg images appropriately in website

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#1e3a8a">
     
     <!-- Preload Critical Resources -->
+    <link rel="preload" href="images/brenda-profile.jpg" as="image">
     <link rel="preload" href="images/brenda.jpg" as="image">
     <link rel="preload" href="styles.css" as="style">
 </head>
@@ -72,27 +73,11 @@
         <div class="slideshow-container parallax-bg">
             <div class="slide active" data-section="home">
                 <div class="slide-overlay"></div>
-                <img src="images/brenda.jpg" alt="Brandon Media - Professional Communication Solutions" loading="eager">
+                <img src="images/brenda-profile.jpg" alt="Brandon Media - Professional Communication Solutions" loading="eager">
             </div>
             <div class="slide" data-section="about">
                 <div class="slide-overlay"></div>
                 <img src="images/brenda.jpg" alt="About Brandon Media - Leadership & Experience" loading="lazy">
-            </div>
-            <div class="slide" data-section="services">
-                <div class="slide-overlay"></div>
-                <img src="images/Media campaigns.jpeg" alt="Media Campaigns & Strategic Solutions" loading="lazy">
-            </div>
-            <div class="slide" data-section="branding">
-                <div class="slide-overlay"></div>
-                <img src="images/branding.jpeg" alt="Professional Branding Solutions" loading="lazy">
-            </div>
-            <div class="slide" data-section="social">
-                <div class="slide-overlay"></div>
-                <img src="images/Social-Media-Management-Tools.png" alt="Social Media Management Tools" loading="lazy">
-            </div>
-            <div class="slide" data-section="podcast">
-                <div class="slide-overlay"></div>
-                <img src="images/podcast.jpeg" alt="Podcast Studio Services" loading="lazy">
             </div>
         </div>
         <div class="hero-content parallax-element" data-speed="0.5">
