Update about section image reference from brenda-profile.jpg to brenda.jpg

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </p>
                     </div>
                     <div class="about-image">
-                        <img src="images/brenda-profile.jpg" alt="Brenda Adong - Founder of Brandon Media" />
+                        <img src="images/brenda.jpg" alt="Brenda Adong - Founder of Brandon Media" />
                         <div class="image-caption">
                             <h4>Brenda Adong</h4>
                             <p>Founder & CEO</p>
