🌐 Add Web Development Service: Custom websites, CMS integration, e-commerce solutions, and performance optimization

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <p class="hero-subtitle">🚀 Your Futuristic Communication & Digital Growth Partner in Africa</p>
             <p class="hero-description">
                 <strong>💻 Let Technology Do The Hard Marketing Work For Your SME.</strong><br>
-                With cutting-edge digital strategies and years of professional experience in modern communication,
+                With cutting-edge digital strategies, professional web development, and years of experience in modern communication,
                 we help businesses navigate the digital landscape and establish powerful connections 
                 with their target audience through innovative, tech-driven solutions.
             </p>
@@ -296,6 +296,19 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <h3>🌐 Web Development</h3>
+                    <p>High-performance, responsive websites built with cutting-edge technology. From custom design to CMS integration and e-commerce solutions - your digital foundation starts here.</p>
+                    <div class="tech-highlights">
+                        <span class="tech-tag">⚡ Performance</span>
+                        <span class="tech-tag">📱 Responsive</span>
+                        <span class="tech-tag">🛒 E-commerce</span>
+                        <span class="tech-tag">🔧 CMS Integration</span>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
                         <i class="fas fa-handshake"></i>
                     </div>
                     <h3>💼 Digital PR Management</h3>
@@ -340,6 +353,17 @@
                     <div class="portfolio-info">
                         <h3>Brand Identity</h3>
                         <p>Complete branding packages from concept to implementation</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="portfolio-image">
+                        <div class="portfolio-placeholder">
+                            🌐
+                        </div>
+                    </div>
+                    <div class="portfolio-info">
+                        <h3>Web Development</h3>
+                        <p>Custom websites and web applications built for performance and user experience</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
@@ -429,6 +453,7 @@
                     <ul>
                         <li><a href="#services">Media Campaigns</a></li>
                         <li><a href="#services">Social Media Management</a></li>
+                        <li><a href="#services">Web Development</a></li>
                         <li><a href="#services">Corporate MC Services</a></li>
                         <li><a href="#services">Branding Solutions</a></li>
                     </ul>
